# Insurance_Enrollment_Prediction

./: .gitignore  Dockerfile  Makefile  README.md  analyze.py  docker-compose.yml  feature_importance.py  index.html  pyproject.toml  report.md  requirements.txt  train.py
models/: best_params.json  cv_results.csv  known_categories.json  model_info.json  test_metrics.json
notebooks/: eda.py
notebooks/figures/importance/: importance_scores.csv
src/: config.py
src/api/: app.py
src/data/: data_loader.py
src/features/: feature_engineering.py
src/models/: trainer.py
tests/: conftest.py  test_api.py  test_data_loader.py  test_feature_engineering.py  test_model_training.py
