[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "insurance-enrollment-prediction"
version = "1.0.0"
description = "ML pipeline for predicting employee insurance enrollment"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110,<1.0",
    "httpx>=0.27,<1.0",
    "joblib>=1.3,<2.0",
    "jupyter>=1.0,<2.0",
    "lightgbm>=4.0,<5.0",
    "matplotlib>=3.8,<4.0",
    "mlflow>=2.10,<3.0",
    "numpy>=1.24,<2.0",
    "optuna>=3.4,<4.0",
    "pandas>=2.0,<3.0",
    "pydantic>=2.0,<3.0",
    "pytest>=8.0,<9.0",
    "scikit-learn>=1.3,<2.0",
    "seaborn>=0.13,<1.0",
    "shap>=0.44,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "xgboost>=2.0,<3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["src*"]

